public/stylesheets/style.css
html, body {
  font: 12px Arial, sans-serif;
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
  min-width: 100%;
  min-height: 100%;
  color: #fff;
  background: #acacac;
  overflow:hidden;
}


@-webkit-keyframes blinker {  
  from { opacity: 1.0; }
  to { opacity: 0.0; }
}

#startup {
	min-width: 100%;
	min-height: 100%;
	background: #000 url('/images/startup.png') no-repeat 50% 50px;
	position: absolute;
	z-index: 999998;
}
#startup .loading {
	position: absolute;
	top: 525px;
	width: 100%;
	text-align: center;
	font: 14px monospace;
	
	-webkit-animation-name: blinker;  
	-webkit-animation-iteration-count: infinite;  
	-webkit-animation-duration: 1s;
}

.loaded #startup, .nogl #startup { display: none; }

#about-icon {
	position: absolute;
	bottom: 25px;
	left: 25px; 
	width: 36px;
	height: 50px;
	background: transparent url('/images/about-icon.png') no-repeat -37px 0;
}

#about-icon:hover {
	background-position: 0 0;
}
#about {
	background: transparent url('/images/about.png') no-repeat 0 0;
	display:none;
	width: 395px;
	height: 286px;
	position:absolute;
	left: 50%;
	top: 50%;
	padding:0; margin:0;
	margin-left: -198px;
	margin-top: -193px;
}
#about .OK {
	position: absolute;
	top: 34px;
	left: 318px;
	width: 67px;
	height: 20px;
	cursor: pointer;
}

#about .close {
	position: absolute;
	top: 5px;
	left: 7px;
	width: 18px;
	height: 19px;
	cursor: pointer;
}



#bsod {
	width: 100%;
	height: 100%;
	position:absolute;
	z-index:10000;
	top: 0;
	left: 0;
	background: #0000aa url('/images/bsod.png') no-repeat 50% 50%;
}

#bsod .bottom {
	position:absolute;
	bottom: 0;
	left: 0;
	height: 30px;
	width: 100%;
	background: #aaaaaa url('/images/bsod-bottom.png') no-repeat 0 50%;
}


#application-container { display: none; }

.webgl #bsod { display:none; }
.nogl #bsod { display:block; }

